public/styles/sharedHtmlAndComponentStyles.css
}/* Styles that are shared with components */

#form-status-div {
  height: 2.5rem;
}

#user-actions-menu {
  padding-top: 1.5rem;
}

.error-message {
  color: darkred;
  display: block;
  font-weight: 600;
}

.fade-in-animation {
  opacity:0;
  animation: fadeIn 100ms forwards
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}

.form-section {
  margin-bottom: 1rem;
}

.form-section > label {
  display: block;
  font-weight: 600;
}

.required-field::after {
  color: darkred;
  content: "*";
}

.section-separator-small {
  border-top: 5px solid;
  border-image-source: url(/assets/images/Section_Border_Tiny.png);
  border-image-slice: 5 5;
  border-image-repeat: round;
}

.success-message {
  color: #00bb51;
  display: block;
  font-weight: 600;
}

@media not screen and (width < 32em) {
  textarea {
    width: 63.5rem;
    height: 25rem;
  }
  #user-actions-menu-raised {
    display: inherit;
  }
}

@media screen and (width < 32em) {  
  textarea {
    width: 100%;
  }
  .hide-mobile {
    display: none;
  } 
  .top-nav-secondary {
    display: grid;
    text-align: center;
  }
  .top-nav-secondary > :not(:first-child) {
    padding-top: 0.5rem;
  }
  .top-nav-secondary span {
    padding-top: 1rem;
  }
  .ui-section {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    text-align: center;
  }
}

@media print {
  header,footer {
    display:none;
  }
  body{
    margin:0px;
  }
  @page{
    margin:0mm;
  }
}

